--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <canvas id="mycanvas" width="650" height="450">
         I'm sorry your browser version does not support canvas <!--Fallback Content-->
     </canvas>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'ae0149300d5d6fbe354afbca17dfb6a1',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformats.com/ae0149300d5d6fbe354afbca17dfb6a1/invoke.js"></scr' + 'ipt>');
+</script>
     <script src="app.js"></script>
 </body>
 </html>
